5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1643_869.log
== TEST (2019-04-07 22:46:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compras = float(input("Digite o valor da compra:"))
valor = compras*(95/100)

if  (compras >= 200)
    print(round(valor, 2))
	
else:
	 print(compras)
-- ERROR:
File "XXXX", line 7
    if  (compras >= 200)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:46:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compras = float(input("Digite o valor da compra:"))
valor = compras*(95/100)

if  (compras >= 200):
    print(round(valor, 2))
	
else:
	 print(compras)
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:46:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compras = float(input("Digite o valor da compra:"))
valor = compras*(95/100)

if  (compras >= 200):
    print(round(valor, 2))
	
else:
	 print(compras)
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:47:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compras = float(input("Digite o valor da compra:"))
valor = compras*(95/100)

if  (compras >= 200):
    print(round(valor, 2))
	
else:
	 print(compras)
-- EXECUTION TIME:
0.310303
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
